WordFeatureTreatment/trainLog/SyntaxError_2.txt
  File "a.py", line 5
    categories = ['alt.atheism', 'talk.religion.misc','comp.graphics', 'sci.space']
             ^
SyntaxError: invalid syntax
